src/test/ui/consts/const_let_assign3.stderr
error[E0723]: mutable references in const fn are unstable
  --> $DIR/const_let_assign3.rs:8:18
   |
LL |     const fn foo(&mut self, x: u32) {
   |                  ^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn)]` to the crate attributes to enable

error[E0764]: mutable references are not allowed in constants
  --> $DIR/const_let_assign3.rs:16:5
   |
LL |     s.foo(3);
   |     ^ `&mut` is only allowed in `const fn`

error[E0764]: mutable references are not allowed in constants
  --> $DIR/const_let_assign3.rs:22:13
   |
LL |     let y = &mut x;
   |             ^^^^^^ `&mut` is only allowed in `const fn`

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const_let_assign3.rs:24:5
   |
LL |     *y = 42;
   |     ^^^^^^^
   |
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0019, E0723, E0764.
For more information about an error, try `rustc --explain E0019`.
